<resources>
    <string name="dataForm">dataForm</string>
    <string name="users">users</string>
    <string name="df">df</string>
    <string name="username2">username</string>
    <string name="limits">^[A-Za-z0-9!@#$%^&amp;*+=/?]{6,}$</string>
    <string name="limits_regx_username">^[A-Za-z0-9_-]{3,15}$</string>
    <string name="blank" />
    <string name="warning_msg_reg_account_exist">This account exist</string>
    <string name="currency2">currency</string>
    <string name="df_curr">df_curr</string>
    <string name="df_tScore">df_tScore</string>
    <string name="limits_email_reg">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+</string>
    <string name="childRef_reg_regFrag">users</string>
    <string name="emailRef_reg_regFrag">email</string>
    <string name="usernameRef_reg_regregFrag">username</string>
    <string name="SettingsPref">SettingsPref</string>
    <string name="getBooleanId">getBooleanId</string>
    <string name="getBooleanId2">getBooleanId2</string>
    <string name="getBooleanId3">getBooleanId3</string>
    <string name="checkRadioButtonId">checkRadioButtonId</string>
    <string name="checkRadioButtonId2">checkRadioButtonId2</string>
    <string name="remember">remember</string>
    <string name="unchecked">false</string>
    <string name="checkbox">checkbox</string>
    <string name="checked">true</string>
    <string name="childRef_username">username</string>
    <string name="childRef_password">password</string>
    <string name="childReg_email">email</string>
    <string name="key_final_setnewpwdFrag">final</string>
    <string name="key_key">key</string>
    <string name="key_key1">key1</string>
    <string name="key_emailid">emailId</string>
    <string name="limits_phone_regex">^[+][0-9]{10,13}$</string>
    <string name="phone_regex">[0-9]{10,13}$</string>
    <string name="childRef_topScore">topScore</string>
    <string name="childRef_Currency">currency</string>
    <string name="image_data">image_data</string>
    <string name="audio">audio</string>
    <string name="stats">stats</string>
    <string name="userProfile">userProfile</string>
    <string name="notification">Notification</string>
    <string name="myNotification">My Notification</string>
    <string name="title">Gear 5</string>
    <string name="bundlePass">bundlePass</string>
    <string name="bundlePass2">bundlePass2</string>
    <string name="getBundlePass">getBundlePass</string>
    <string name="data">data</string>
    <string name="getIndex">getIndex</string>
    <string name="childReg_reviews">reviews</string>
    <string name="key_precent">%</string>
    <string name="key_GEAR">GEAR</string>
    <string name="onlineLink">https://media.discordapp.net/attachments/935271239788941412/1048239865155829912/unknown.png</string>
    <string name="plus">+</string>
    <string name="key_typelogin">typeLogin</string>
    <string name="gearaccount">GearAccount</string>
    <string name="geargoogleaccount">GearGoogleAccount</string>
    <string name="null_pwd">No PASSWORD</string>
    <string name="null_email">NO EMAIL</string>
    <string name="null_name">No need full name</string>
    <string name="key_topScore">topScore</string>
    <string name="key_topScore2">topScore2</string>
    <string name="key_topScore3">topScore3</string>
    <string name="key_topScore4">topScore4</string>
    <string name="key_topScore5">topScore5</string>
    <string name="email_regex">^([A-Z][a-z]*((\\s)))+[A-Z][a-z]*$</string>
    <string name="TAG_FAILED">FAILED</string>
    <string name="ERROR_MSG_SCORFRAG">FAILED GOOGLE LOAD SCORE</string>
    <string name="ERROR_MSG_BALAFRAG">FAILED GOOGLE LOAD BALANCE TO DB</string>
    <string name="profileTopScore">profileTopScore</string>
    <string name="profileScore2">profileScore2</string>
    <string name="profileScore3">profileScore3</string>
    <string name="profileScore4">profileScore4</string>
    <string name="profileScore5">profileScore5</string>
    <string name="profileCur">profileCur</string>
    <string name="checker">checker</string>
    <string name="profileUsername">profileUsername</string>
    <string name="app_name">Gear5</string>
    <string name="play">Play</string>
    <string name="score">Score</string>
    <string name="Profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Gear5">GEAR 5!!</string>
    <string name="ExitApp">Do you wish to exit the app?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="name_score">Name: | Score:</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="top_score">Top Score:</string>
    <string name="currency">Currency:</string>
    <string name="login_page_password">Password</string>
    <string name="login_page_loginButton">Login</string>
    <string name="login_page_registerButton">Register</string>
    <string name="reg_page_confirm_password">Confirm Password</string>
    <string name="settings">Settings</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="connect">Connect</string>
    <string name="portrait">Lock Screen to Portrait</string>
    <string name="button_color">Button Color</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="mute_audio">Mute Audio</string>
    <string name="joystick_color">Joystick Color</string>
    <string name="error_msg_missing_username">Please Enter Username</string>
    <string name="welcome">welcome</string>
    <string name="warning_msg_reg_confir">Missing Confirmation Password</string>
    <string name="warning_msg_reg_pwd">Missing Password</string>
    <string name="warning_msg_msg_username">Missing Username</string>
    <string name="warning_msg_reg_confir_not_maching">Password did not match</string>
    <string name="warning_msg_reg_pwd_not_maching">Please Enter at least 6 characters and one special character i.e !</string>
    <string name="warning_msg_reg_username_not_maching">Please Enter Valid Username</string>
    <string name="click_to_add_image">click to add image</string>
    <string name="success_msg_reg">Register Successful</string>
    <string name="PermissionGranted">Permission Granted</string>
    <string name="PermissionDenied">Permission Denied</string>
    <string name="error_msg_login">Failed to find</string>
    <string name="error_msg_login_read">Failed to Read</string>
    <string name="login_page_remember_me">Remember me</string>
    <string name="welcome_to_gear5_title_retail">Welcome to GEAR 5</string>
    <string name="ask_logout">Do you want to Log Out?</string>
    <string name="create_account_title_registerfrag">Create Account</string>
    <string name="register_btn_txt_done">Done</string>
    <string name="forgot_password_forgotFrag_title">Forgot Password</string>
    <string name="email_registration">Email</string>
    <string name="please_provide_your_email_of_your_account">Provide your account email to reset your password</string>
    <string name="enter_password_sent_in_your_email_otpFrag">Enter Recovery Code Sent In Your Email</string>
    <string name="verification_otpFrag">Verification</string>
    <string name="review">Review</string>
    <string name="submit">SUBMIT</string>
    <string name="rating_default_5_star">Rating (Default 5 Stars):</string>
    <string name="name_optional">Name (Optional)</string>
    <string name="phone_optional">Phone (Optional)</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="comment_optional">Comment (Optional)</string>
    <string name="balance">Balance</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="gear500title">500 Gears</string>
    <string name="gear1000title">1000 Gears</string>
    <string name="gear2200title">2200 Gears</string>
    <string name="gear5700title">5700 Gears</string>
    <string name="gear11600title">11600 Gears</string>
    <string name="gear11600msg">Purchase 11600 Gears?</string>
    <string name="gear5700msg">Purchase 5700 Gears?</string>
    <string name="gear2200msg">Purchase 2200 Gears?</string>
    <string name="gear1100msg">Purchase 1000 Gears?</string>
    <string name="gear500msg">Purchase 500 Gears?</string>
    <string name="purchase_currency">PURCHASE CURRENCY</string>
    <string name="next_btn_forgotpwd">Next</string>
    <string name="code_otpfrag">Co\nde</string>
    <string name="ok_newpwdfrag">ok</string>
    <string name="new_password_newpwdfrag">New Password</string>
    <string name="verify_code_otpFrag">Verify Code</string>
    <string name="warning_msg_reg_email">Enter Email</string>
    <string name="warning_email_reg_email_limits">Email invalid</string>
    <string name="warning_username_length_reg">Username must be 5 characters or long</string>
    <string name="topCurrency">topCurrency</string>
    <string name="warning_email_used_regFrag">Email being used</string>
    <string name="warning_username_used_regFrag">Username being used</string>
    <string name="warning_pwd_length_reg"> Password must be at least 6 characters long, one special character, one capital letter, and one number</string>
    <string name="warning_msg_username_loginFrag">Username Invalid</string>
    <string name="warning_msg_pwd_loginFrag">Password Incorrect</string>
    <string name="login_with_loginFrag">Login with</string>
    <string name="google_loginFrag">Google</string>
    <string name="sign_up_with_regFrag">Sign-up with</string>
    <string name="pick">Pick</string>
    <string name="complate_newpwd">Password Updated</string>
    <string name="warning_msg_otpcode_verifyFrag">Enter code</string>
    <string name="warning_msg_failAuth_varifyFrag">Failed</string>
    <string name="warning_msg_num_userPhoneFrag">Enter number</string>
    <string name="warning_msg_num1_userPhoneFrag">This is not a number</string>
    <string name="code_opt_landfrag">CODE</string>
    <string name="change_profile_icon">Change Profile Icon</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="angle">Angle</string>
    <string name="distance">Distance</string>
    <string name="direction">Direction</string>
    <string name="save">save</string>
    <string name="show_joystick_stats">Show Joystick Stats</string>
    <string name="gears">\u0020Gears</string>
    <string name="usernameDisplay">Username :\u0020</string>
    <string name="scoreDisplay">Top Score :\u0020</string>
    <string name="currencyDisplay">Currency :\u0020</string>
    <string name="reviewSubmitted">Review submitted</string>
    <string name="reviewReply">Thank you for your review</string>
    <string name="x_display">X : \u0020</string>
    <string name="y_display">Y : \u0020</string>
    <string name="angle_display">Angle : \u0020</string>
    <string name="distance_display">Distance : \u0020</string>
    <string name="direction_display">Direction :</string>
    <string name="direction_up">Direction : Up</string>
    <string name="direction_up_right">Direction : Up Right</string>
    <string name="direction_right">Direction : Right</string>
    <string name="direction_down_right">Direction : Down Right</string>
    <string name="direction_down">Direction : Down</string>
    <string name="direction_down_left">Direction : Down Left</string>
    <string name="direction_left">Direction : Left</string>
    <string name="direction_up_left">Direction : Up Left</string>
    <string name="direction_center">Direction : Center</string>
    <string name="name_on_card">Name on Card</string>
    <string name="pay">Pay</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvv">CVV</string>
    <string name="PAY">PAY</string>
</resources>