<?xml version="1.0" encoding="utf-8"?>
<!--     CENG-322-0NC Francisco Santos n01423860, Pradeep Singh n00975892-->
<!--     CENG-322-0NB Ralph Robes n01410324, Elijah Tanimowo n01433560-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/welcome"
        android:icon="@drawable/ic_baseline_play"
        android:title="@string/welcome"
        android:visible="false"/>
    <item
        android:id="@+id/play"
        android:icon="@drawable/ic_baseline_play"
        android:title="@string/play" />
    <item
        android:id="@+id/score"
        android:icon="@drawable/ic_baseline_score"
        android:title="@string/score" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_profile"
        android:title="@string/Profile" />
</menu>