<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_card_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:layout_alignParentStart="true"
        android:inputType="number"
        android:maxLength="16"/>

    <EditText
        android:id="@+id/edit_card_exp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expiration_date"
        android:layout_below="@+id/edit_card_num"
        android:layout_alignParentStart="true"
        android:inputType="date"
        android:maxLength="4"/>

    <EditText
        android:id="@+id/edit_card_cvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cvv"
        android:layout_below="@+id/edit_card_exp"
        android:inputType="number"
        android:maxLength="3"/>

    <Button
        android:id="@+id/pay_button"
        android:text="@string/PAY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_card_cvv"/>

</RelativeLayout>