<?xml version="1.0" encoding="utf-8"?>
<!--     CENG-322-0NC Francisco Santos n01423860, Pradeep Singh n00975892-->
<!--     CENG-322-0NB Ralph Robes n01410324, Elijah Tanimowo n01433560-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper5"
    tools:context=".ProfileFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/nikaLogout"
        android:layout_width="193dp"
        android:layout_height="67dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="521dp"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nikaUsername"
        android:layout_width="201dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="188dp"
        android:text="@string/username"
        android:textColor="#FFFF00"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nikaTopScore"
        android:layout_width="216dp"
        android:layout_height="66dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="256dp"
        android:text="@string/top_score"
        android:textColor="#FFFF00"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nikaCurrency"
        android:layout_width="205dp"
        android:layout_height="66dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="344dp"
        android:text="@string/currency"
        android:textColor="#FFFF00"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>