<?xml version="1.0" encoding="utf-8"?>
<!--     CENG-322-0NC Francisco Santos n01423860, Pradeep Singh n00975892-->
<!--     CENG-322-0NB Ralph Robes n01410324, Elijah Tanimowo n01433560-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper2"
    tools:context=".SettingsFragment">


    <ScrollView
        android:id="@+id/nikaSV"
        android:layout_width="375dp"
        android:layout_height="460dp"
        android:layout_marginTop="52dp"
        android:scrollbarFadeDuration="0"
        android:scrollbarThumbVertical="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/nikaLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/black"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nikaTV2"
                android:layout_width="203dp"
                android:layout_height="43dp"
                android:text="@string/button_color"
                android:textColor="#FFFF00"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/nikaRG1"
                android:layout_width="102dp"
                android:layout_height="154dp"
                app:layout_constraintStart_toEndOf="@+id/nikaTV2"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/nikaRB4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/red"
                    android:textColor="#FFFF00" />

                <RadioButton
                    android:id="@+id/nikaRB5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yellow"
                    android:textColor="#FFFF00" />

                <RadioButton
                    android:id="@+id/nikaRB6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/green"
                    android:textColor="#FFFF00" />
            </RadioGroup>

            <Space
                android:id="@+id/nikaSpace2"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/nikaTV3"
                android:layout_width="205dp"
                android:layout_height="39dp"
                android:text="@string/mute_audio"
                android:textColor="#FFFF00"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/nikaCB1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="#FFFF00"
                app:layout_constraintStart_toEndOf="@+id/nikaTV3"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:id="@+id/nikaSpace3"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/nikaTV4"
                android:layout_width="205dp"
                android:layout_height="77dp"
                android:text="@string/portrait"
                android:textColor="#FFFF00"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/nikaCB2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="#FFFF00"
                app:layout_constraintStart_toEndOf="@+id/nikaTV4"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:id="@+id/nikaSpace4"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/nikaTV5"
                android:layout_width="205dp"
                android:layout_height="77dp"
                android:text="@string/show_joystick_stats"
                android:textColor="#FFFF00"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/nikaCB3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="#FFFF00"
                app:layout_constraintStart_toEndOf="@+id/nikaTV4"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:id="@+id/nikaSpace5"
                android:layout_width="match_parent"
                android:layout_height="20dp" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nikaSV" />


</androidx.constraintlayout.widget.ConstraintLayout>