<?xml version="1.0" encoding="utf-8"?>
<!--     CENG-322-0NC Francisco Santos n01423860, Pradeep Singh n00975892-->
<!--     CENG-322-0NB Ralph Robes n01410324, Elijah Tanimowo n01433560-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/nikaLinearLayout">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:adjustViewBounds="true"

            android:src="@drawable/nika_logo_transparent" />

        <TextView
            android:id="@+id/nikaGear5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="60sp" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nikaTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/username"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            app:boxBackgroundColor="#696969">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nika_reg_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nikaTextInput2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/login_page_password"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            app:boxBackgroundColor="#696969">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nika_reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nikaTextInput3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/reg_page_confirm_password"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            app:boxBackgroundColor="#696969">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nika_reg_confirmation_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/nikaRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nika_btn_login_reg"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                android:text="@string/login_page_loginButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nika_btn_register_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_toStartOf="@id/nika_btn_login_reg"
                android:text="@string/login_page_registerButton"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>