<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginSetup.ForgotPasswordFragment"
    android:background="@drawable/purple_gradient_wallpaperv3"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/nika_btn_backarrow_forgotPwdFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24_state"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/forgot_pwd_icon"
            android:background="@drawable/background_pwd_icon_pwd_forgot"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_forgotFrag_title"
            android:textColor="@color/black"
            android:fontFamily="@font/press_start_2p"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:text="@string/please_provide_your_email_of_your_account"
            android:textAlignment="center"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidthFocused="2dp"
            android:hint="@string/email_registration"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="@color/white"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/white"
            app:endIconTint="@color/white"
            android:textColorHint="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nika_edittxt_email_forgotpwdFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/nika_btn_forgotPwd_next"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/next_btn_forgotpwd"
            android:textColor="@color/white"
            android:background="@drawable/custom_button_version3_state"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:layout_gravity="center"/>
    </LinearLayout>

</ScrollView>